--- a/templates/wsgi-site-conf.j2
+++ b/templates/wsgi-site-conf.j2
@@ -114,11 +114,8 @@ server {
         proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
         proxy_set_header    X-Forwarded-Protocol  $scheme;
 
-        # pass request to uwsgi
-        uwsgi_pass {{ nginx_wsgi_app }}-wsgi;
-        uwsgi_read_timeout {{ nginx_wsgi_read_timeout }}s;
-        uwsgi_send_timeout {{ nginx_wsgi_send_timeout }}s;
-        include uwsgi_params;
+        # Varnish proxy
+        proxy_pass      http://127.0.0.1:6081/;
     }
 
 {% if upstream_asgi_servers %}
@@ -216,4 +213,25 @@ server {
     auth_basic_user_file {{ nginx_restricted_file_path }};
 {% endif %}
 
+}
+
+server {
+    listen      127.0.0.1:8080;
+
+    # LOCATIONS
+    # default location
+    location / {
+
+        proxy_redirect      off;
+        proxy_set_header    Host                  $http_host;
+        proxy_set_header    X-Real-IP             $remote_addr;
+        proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Protocol  $scheme;
+
+        # pass request to uwsgi
+        uwsgi_pass webapp-wsgi;
+        uwsgi_read_timeout 300s;
+        uwsgi_send_timeout 300s;
+        include uwsgi_params;
+    }
 }
