--- a/templates/wsgi-site-conf.j2
+++ b/templates/wsgi-site-conf.j2
@@ -31,6 +31,36 @@ log_format upstream_time '$remote_addr - $remote_user [$time_local] '
                          '"$http_referer" "$http_user_agent" '
                          'rt=$request_time uct="$upstream_connect_time" uht="$upstream_header_time" urt="$upstream_response_time"';
 
+# Drop requests for unknown hosts
+server {
+    listen  80 default_server;
+    listen 443 default_server ssl;
+
+    access_log {{ nginx_log_dir }}/{{ nginx_server_name }}_access.log;
+    error_log  {{ nginx_log_dir }}/{{ nginx_server_name }}_error.log;
+
+    # SSL config
+    {% if nginx_use_letsencrypt %}
+    ssl_certificate     {{ letsencrypt_dir }}/{{ letsencrypt_cert_filename|default('fullchain.pem') }};
+    ssl_certificate_key {{ letsencrypt_dir }}/{{ letsencrypt_privkey_filename|default('privkey.pem') }};
+    {% else %}
+    ssl_certificate      {{ nginx_ssl_dest_dir }}/{{ nginx_server_name }}.crt;
+    ssl_certificate_key  {{ nginx_ssl_dest_dir }}/{{ nginx_server_name }}.key;
+    {% endif %}
+    ssl_protocols        TLSv1 TLSv1.1 TLSv1.2;
+    ssl_session_cache    shared:SSL:10m;
+    ssl_session_timeout  10m;
+    ssl_ciphers {{ nginx_ssl_ciphers }};
+    ssl_prefer_server_ciphers on;
+    # stronger key for key-exchange (Diffie Hellman)
+    {% if nginx_strong_dh_group %}
+    ssl_dhparam          /etc/ssl/certs/dhparams.pem;
+    {% endif %}
+
+    # return 'no response' for unknown hosts
+    return 444;
+}
+
 # redirect from HTTP to HTTPS
 server {
     listen 80;
