--- a/templates/wsgi-site-conf.j2
+++ b/templates/wsgi-site-conf.j2
@@ -237,8 +237,8 @@ server {
 
         # pass request to uwsgi
         uwsgi_pass {{ nginx_wsgi_app }}-wsgi;
-        uwsgi_read_timeout 300s;
-        uwsgi_send_timeout 300s;
+        uwsgi_read_timeout 30s;
+        uwsgi_send_timeout 30s;
         include uwsgi_params;
     }
 
@@ -257,7 +257,37 @@ server {
         include uwsgi_params;
     }
 
-    location ~ "/api/v[0-9].+/(productions|persons|businesses)/search" {
+    location ~ "/api/v[0-9].+/(productions|persons|businesses)/search/deep" {
+
+        proxy_redirect      off;
+        proxy_set_header    Host                  $http_host;
+        proxy_set_header    X-Real-IP             $remote_addr;
+        proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Protocol  $scheme;
+
+        # pass request to uwsgi
+        uwsgi_pass {{ nginx_wsgi_app }}-wsgi-heavy;
+        uwsgi_read_timeout 300s;
+        uwsgi_send_timeout 300s;
+        include uwsgi_params;
+    }
+
+    location ~ "/api/v[0-9].+/(persons|businesses)/[^/]+/scores" {
+
+        proxy_redirect      off;
+        proxy_set_header    Host                  $http_host;
+        proxy_set_header    X-Real-IP             $remote_addr;
+        proxy_set_header    X-Forwarded-For       $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Protocol  $scheme;
+
+        # pass request to uwsgi
+        uwsgi_pass {{ nginx_wsgi_app }}-wsgi-heavy;
+        uwsgi_read_timeout 300s;
+        uwsgi_send_timeout 300s;
+        include uwsgi_params;
+    }
+
+    location /sl8dmin {
 
         proxy_redirect      off;
         proxy_set_header    Host                  $http_host;
